--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -38,13 +38,8 @@
                                     <label id="lblRuta">Requisiciones</label>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
-                    @*@if (ViewBag.Requisiciones != null)
-                        {*@
-                    <div onload="javascript: showNotification('alert-success', 'Proceso Exitoso', 'top', 'center', '', '');"></div>
-
-                    @*}*@
+                        </div>                                                            
+                    </div>                  
                     <div class="row clearfix">
                         <div class="col-lg-12">
                             <div class="card">
@@ -54,12 +49,20 @@
                                 <div class="body">
                                     <div class="row clearfix">
                                         <div class="col-sm-4">
-                                            <select id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
-                                                @foreach (var lst in Model.Empresas)
-                                                {
-                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
-                                                }
-                                            </select>
+                                            @if (ViewBag.EsAdmin)
+                                            {
+                                                <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                    <option value="0">Seleccione una gasera</option>
+                                                    @foreach (var lst in ViewBag.Empresas)
+                                                    {
+                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    }
+                                                </select>
+                                            }
+                                            else
+                                            {
+                                                <strong>Gasera: </strong>@ViewBag.Empresas                                               
+                                            }
                                         </div>
                                         <div class="col-sm-4">
                                             <div class="form-group">
@@ -74,7 +77,7 @@
                                         <div class=" row clearfix">
                                             <div class="col-lg-3">
                                                 <label>Estatus</label>
-                                                <select id="estatus" class="form-control selectpicker show-tick" data-live-search="true">
+                                                <select id="estatus" class="form-control show-tick" data-live-search="true">
                                                     @foreach (var lst in Model.Estatus)
                                                     {
                                                         <option value="@lst.IdRequisicionEstatus">@lst.Estatus</option>
@@ -140,7 +143,6 @@
                                                     </div>
                                                 </div>
                                                 @*<dtp:DateTimePicker ID="dtpFechaRequisicionA" CssClass="dataTxt" />*@
-
                                             </div>
                                             <div class="col-lg-1">
                                                 <button class="btn btn-primary btn-round btn-block text-center" OnClick="btnBuscar_Click">
