JSA-24/10/2018 Avance Ajustes requisicion

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionRevision.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionRevision.cshtml
@@ -38,10 +38,9 @@
                         <div class="col-lg-5 col-md-5 col-sm-12">
                             <h2>Compras</h2>
                             <ul class="breadcrumb padding-0">
-                                <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
-                                <li class="breadcrumb-item active">
-                                    <label id="lblRuta">Requisición / Revisición </label>
-                                </li>
+                                <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item">Requisición</li>
+                                <li class="breadcrumb-item">Revisición</li>
                             </ul>
                         </div>
                     </div>
@@ -54,19 +53,17 @@
                                     <div class="row clearfix">
                                         <div class="col-sm-4">
                                             <div class="form-group">
-                                                <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" disabled data-live-search="true">
-                                                    @foreach (var lst in ViewBag.Empresas)
-                                                    {
-                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
-                                                    }
-                                                </select>
+                                                <strong>Gasera: </strong>
+                                                @foreach (var item in @ViewBag.Empresas)
+                                                {
+                                                    @item.NombreComercial
+                                                }
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-group">
                                                 <div class="input-group">
-                                                    <label>Número de Requisición:</label>&nbsp;
-                                                    <label>@Model.NumeroRequisicion</label>
+                                                    <strong>Número de Requisición: </strong>@Model.NumeroRequisicion
                                                 </div>
                                             </div>
                                         </div>
@@ -74,16 +71,15 @@
                                     <div class="row clearfix z-index" id="divCamposRequi">
                                         <div class="col-lg-3">
                                             <b>Fecha requerida:</b>
-                                            <input type="text" value="@Model.FechaRequerida" name="FechaRequerida" disabled class="form-control" />
+                                            <div>
+                                                @Model.FechaRequerida
+                                            </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <b>Solicitante:</b>
-                                            <select id="ddlSoliciante" name="IdUsuarioSolicitante" class="form-control show-tick" disabled data-live-search="true">
-                                                @foreach (var lst in ViewBag.Usuarios)
-                                                {
-                                                    <option value="@lst.IdUsuario">@lst.Nombre @lst.Apellido1</option>
-                                                }
-                                            </select>
+                                            <div>
+                                                @ViewBag.Usuarios.Nombre @ViewBag.Usuarios.Apellido1
+                                            </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="form-group form-float">
@@ -115,7 +111,7 @@
                                         </div>
                                     }
                                     <br />
-                                    <div class="row clearfix">
+                                    <div class="row clearfix blockquote blockquote-info btn-round">
                                         <div class="table-responsive">
                                             <table id="ListaProductos" class="table table-hover">
                                                 <thead>
@@ -138,7 +134,7 @@
                                     </div>
                                     <div class="row clearfix">
                                         <div class="col-lg-12">
-                                            <h2 class="card-inside-title">Opinión de Almacen</h2>
+                                            <strong>Opinión de Almacen</strong>
                                             <div class="row clearfix ">
                                                 <div class="col-sm-12 blockquote blockquote-info btn-round">
                                                     <div class="form-group">
@@ -158,7 +154,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-8 text-center">
-                                            <a href="#ModalCancelar" data-toggle="modal" id="btnCancel" data-target="#ModalCancelar" class="btn btn-raised btn-primary btn-round disabled">
+                                            <a href="#ModalCancelar" data-toggle="modal" id="btnCancel" data-target="#ModalCancelar" class="btn btn-raised btn-primary btn-round">
                                                 Cancelar
                                             </a>
                                         </div>
@@ -183,8 +179,12 @@
                     </div>
                     <div class="modal-body">
                         <div class="body">
-                            <div class="col-sm-12">
-                                <textarea name="MotivoCancela" class="form-control" Rows="5" placeholder="Cual es el motivo de la cancelacion..."></textarea>
+                            <div class="col-sm-12 blockquote blockquote-info btn-round">
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        @Html.TextAreaFor(m => m.MotivoCancela, new { @class = "form-control no-resize", @Rows = 4 })
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
